...
    <string name="menu_help">About</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="reminder_off_title">Press timer to start work</string>
    <string name="eula_accept">I accept</string>
    <string name="eula_reject">No thanks</string>
...
    <string name="notification_sample_text">Sample text for period end notification</string>
    <string name="close_notification">Close</string>
    <string name="on_work_period">Work</string>
    <string name="on_rest_period">Rest</string>
    <string name="extend">extend</string>
    <string name="description_extended">extended %1$d times</string>
    <string name="description_turn_off">To turn off, press and hold timer</string>
    <string name="description_extended_one_time">extended</string>
    <string name="extend_current_period">extend period</string>
    <string name="extend_period_one_option">extend by %1$d min</string>
    <string name="toast_period_end_forced">The current period was forced to end</string>
...
    <string name="toast_period_end_extended_previous">The previous period has been extended</string>
    <string name="hint_dialog_text">i</string>
    <string name="swipe_area_text">swipe to %1$s</string>
    <string name="swipe_area_text_land">s\nw\ni\np\ne\n\nt\no\n\n%1$s</string>
    <string name="swipe_area_text_land_work">w\no\nr\nk</string>
    <string name="swipe_area_text_land_rest">r\ne\ns\nt</string>
    <string name="release_text">Release to end current period</string>
    <string name="timer_layout_colon_string">:</string>
    <string name="timer_layout_point_string">.</string>
    <string name="turning_off_text">Turning off&#8230;</string>
    <string name="swipe_area_work">work</string>
    <string name="swipe_area_rest">rest</string>

    <!-- Notification -->
...
    <string name="work">work</string>
    <string name="rest">rest</string>
    <string name="notification_work_end_title">Time to rest</string>
    <string name="notification_rest_end_title">Back to work</string>
    <string name="notification_toast_period_extended">The last period is extended</string>
...
    <!-- extend Dialog -->
    <string name="extend_dialog_title">Extend period</string>
    <string name="extend_dialog_close_dialog_text">Cancel</string>
    <string name="extend_dialog_button">Extend by %1$d minutes</string>
    <!-- battery settings Dialog -->
    <string name="battery_dialog_inconsistent_warning">Selecting short period lengths (less than 10 minutes) can result in delayed (late) period end notifications</string>
...
    <string name="pref_mode_summary_automatic">Following periods start automatically</string>
    <string name="pref_mode_summary_manual">Periods are started after user confirmation</string>
    <string name="pref_mode_key">reminder_mode</string>
    <string name="pref_category_basic_settings_key">basic_settings_category</string>
    <string name="pref_category_basic_settings_title">General settings</string>
...
    <string name="pref_screen_periods_title">Work and rest period settings</string>
    <string name="pref_screen_extension_title">Period extension settings</string>
    <string name="pref_work_period_length_key">work_period_length</string>
    <string name="pref_work_period_length_title">Work period length</string>
    <string name="pref_work_period_length_dialog_text">Set period length in hours and minutes</string>
    <string name="short_period_warning">Note: Selecting a period length, that is shorter than 10 minutes, can result in delayed period end notifications. If such issues occur, try disabling battery optimisation for Rest Reminder in device settings.</string>
    <string name="pref_rest_period_length_key">rest_period_length</string>
    <string name="pref_rest_period_length_title">Rest period length</string>
    <string name="pref_rest_period_length_dialog_text">Set period length in hours and minutes</string>
...
    <string name="pref_approx_time_sound_title">Proximity alarm sound</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="pref_end_period_key">enable_end_period</string>
    <string name="pref_end_period_title">End current period</string>
    <string name="pref_end_period_summary">Force current period to end</string>
...
    <string name="pref_screen_period_extend_key">pref_screen_period_extend_key</string>
    <string name="pref_screen_period_extend_title">Extend period settings</string>
    <string name="pref_enable_extend_key">enable_end_extend</string>
    <string name="pref_enable_extend_summary">Extend current period</string>
    <string name="pref_enable_extend_title">Extend period</string>
...
    <string name="pref_enable_short_periods_summary">Periods can be less than 10 minutes short</string>
    <string name="pref_enable_short_periods_title">Allow short periods</string>
    <string name="pref_period_extend_length_key">end_extend_length_key</string>
    <string name="pref_period_extend_length_title">Extension base length</string>
    <string name="pref_period_extend_length_summary">Set the period end extend duration in minutes</string>
    <string name="pref_period_extend_length_dialog_text">Set the extend in minutes (1&#8211;120)</string>
    <string name="pref_period_extend_options_key">end_extend_options_key</string>
    <string name="pref_period_extend_options_title">Amount of extension options</string>
    <string name="pref_period_extend_options_dialog_text">Choose the amount of extend options</string>
...
