<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start"
tools:context="com.colormindapps.rest_reminder_alarm.MainActivity">

...
			android:layout_below="@id/toolbar"
			/>



		<Button
			android:id="@+id/info_button"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="15dp"
			android:onClick="showHintDialog"
			android:layout_below="@id/toolbar"
			android:text="@string/hint_dialog_text"
			style="@style/InfoButton"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/timer_layout"
			android:layout_below="@id/info_button"
			android:gravity="center"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/period_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center"
				style="@style/TitleFont" />

			<TextView
...
			android:layout_marginRight="@dimen/timer_layout_marginRight"
			android:background="@drawable/btn_timer_np"
			android:clickable="true"
			android:focusable="true">

			<TextView
				android:id="@+id/timer_hour1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

			<TextView
				android:id="@+id/timer_hour2"
				style="@style/TimerFont"
				android:layout_width="@dimen/timer_digit_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_hour1" />

...
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_sepparator_colon_marginTop"
				android:layout_toRightOf="@id/timer_hour2"
				android:text="@string/timer_layout_colon_string"/>

			<TextView
				android:id="@+id/timer_minute1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_colon"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />
			<TextView
				android:id="@+id/timer_minute2"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_minute1"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

...
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_sepparator_point_marginTop"
				android:layout_toRightOf="@id/timer_minute2"
				android:text="@string/timer_layout_point_string" />

			<TextView
				android:id="@+id/timer_second1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_point"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />
			<TextView
				android:id="@+id/timer_second2"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_second1"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

...
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:gravity="center"
				android:layout_weight="1">

				<Button
					android:id="@+id/button_period_end_extend"
					style="@style/ExtendButton"
					android:layout_width="@dimen/button_period_end_extend_width"
					android:layout_height="@dimen/button_period_end_extend_height"
					android:layout_gravity="center"
					android:stateListAnimator="@null"
					android:background="@drawable/btn_extend_np"
...
