...
    
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
           	<Button
	    android:id="@+id/notification_turn_off"
	    android:layout_width="48dp"
	    android:layout_height="48dp"
	    android:onClick="notificationTurnOff"
	    android:background="@drawable/btn_turn_off"
		android:stateListAnimator="@null"
	    android:layout_marginTop="15dp"
...
	        android:layout_height="0dp"
	        android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

	            <TextView
	        android:id="@+id/notification_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/TitleFont"
                    android:layout_marginTop="@dimen/notification_title_marginTop"
	        android:layout_marginBottom="@dimen/notification_title_marginBottom"  
	        android:text="@string/notification_work_end_title"
...
	    android:layout_gravity="center_horizontal"
	    android:background="@drawable/btn_extend_np"
	    android:text="@string/extend_current_period"
	    android:visibility="gone" />
	
	<Button
	    android:id="@+id/notification_button"
	    style="@style/NotificationButtonFont"
	    android:layout_width="@dimen/notification_button_width"
	    android:layout_height="@dimen/notification_button_height"
	    android:layout_alignParentEnd="false"
		android:layout_alignParentRight="false"
	    android:layout_gravity="center_horizontal"
...
